<resources>
    <string name="app_name">TimeRx</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="signout">Do you want to sign out?</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="no_user">No User Selected</string>
    <string name="pls_sign">Please Sign In</string>
    <string name="signed_in_as">Signed in as: </string>
    <string name="please_sign_in">Please sign in to continue!</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="infDoseBox">Unlimited Dosage?</string>
    <string name="medNotify">Notify when prescription is low?</string>
    <string name="title_activity_authenticator">AuthenticatorActivity</string>
    <string name="welcomeTest">Welcome! Logging in...</string>
    <string name="title_activity_medication_send">MedicationSend</string>
    <string name="title_activity_alarm_send">AlarmSend</string>
    <string name="minute">Minute</string>
    <string name="t">T</string>
    <string name="m">M</string>
    <string name="su">Su</string>
    <string name="w">W</string>
    <string name="th">Th</string>
    <string name="f">F</string>
    <string name="hour">Hour</string>

    <string name="sa">Sa</string>
    <string name="medSelText">Select Medication:</string>
    <string name="entryWindow">Time Window?</string>
    <string name="switchActive">Active?</string>
    <string name="timerDialogInput">Time From: (24-hr)</string>
    <string name="timerSelectTo">Time To: (24 hour format)</string>
    <string name="DeleteDia">Delete Alarm</string>

    <string name="timer_notification_title_template">Timer: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="timer_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string name="builder_notification_title_template">Builder: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="builder_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
</resources>
